src/objects/OpenTradingHours__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EndHours__c</fullName>
        <label>End Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndMinutes__c</fullName>
        <label>End Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OpenTradingHours</label>
</CustomObject>